Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0
-
Windows 7 64bit
-
8368557b9c0010fb205969d010c9d8549fbee0ae
Description
If you have QAxWidget showing standard Microsoft Web Browser control and a QLineEdit in same application, the web browser will hog the keyboard focus, so you can't enter text to the line edit.
ui->axWidget->setControl("{8856F961-340A-11D0-A96B-00C04FD705A2}"); ui->axWidget->dynamicCall("Navigate(const QString&)", "www.google.com");
Attachments
Issue Links
- is required for
-
QTBUG-24209 Qt 5.0 - Windows: Fix the QtActiveQt module
-
- Closed
-
- relates to
-
QTBUG-70810 Qt application stays on foreground after a call to QDesktopServices::openUrl
-
- Closed
-
-
QTBUG-37126 Windows: Address line edit of Active Qt WebBrowser example sometimes can not be focussed any more
-
- Closed
-